--- a/selenium-grid-automation-framework-docker/selenium-docker/src/test/resources/config/default.properties
+++ b/selenium-grid-automation-framework-docker/selenium-docker/src/test/resources/config/default.properties
@@ -9,3 +9,5 @@ browser=chrome
 # application
 flightReservation.url=https://d1uh9e7cu07ukd.cloudfront.net/selenium-docker/reservation-app/index.html
 vendorPortal.url=https://d1uh9e7cu07ukd.cloudfront.net/selenium-docker/vendor-app/index.html
+
+# $ java -cp 'libs/*' org.testng.TestNG -threadcount 1 test-suites/vendor-portal.xml 
